unpackaged/main/default/objects/Account/fields/Account_ARR_in_USD__c.field-meta.xml
<CustomField>
    <fullName>Account_ARR_in_USD__c</fullName>
    <label>Account ARR in USD</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>