unpackaged/main/default/objects/Account/fields/Account_in_Hierarchy_is_Customer__c.field-meta.xml
<CustomField>
    <fullName>Account_in_Hierarchy_is_Customer__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Account in Hierarchy is Customer</label>
    <type>Checkbox</type>
</CustomField>