unpackaged/main/default/objects/Account/fields/Account_Price_Book__c.field-meta.xml
<CustomField>
    <fullName>Account_Price_Book__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Greenbyte Req</description>
    <label>Price Book</label>
    <referenceTo>Pricebook2</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>