unpackaged/main/default/objects/Account/fields/Billing_Account_Only__c.field-meta.xml
<CustomField>
    <fullName>Billing_Account_Only__c</fullName>
    <defaultValue>&#39;No&#39;</defaultValue>
    <label>Billing Account Only</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
                <default>true</default>
                <label>No</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>