unpackaged/main/default/objects/Account/fields/Billing_Address_Netsuite_Id__c.field-meta.xml
<CustomField>
    <fullName>Billing_Address_Netsuite_Id__c</fullName>
    <label>Billing Address Netsuite Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>