unpackaged/main/default/objects/Account/fields/Compliance_Designations__c.field-meta.xml
<CustomField>
    <fullName>Compliance_Designations__c</fullName>
    <label>Compliance Designations</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>NERC/CIP</fullName>
            </value>
            <value>
                <fullName>Data Storage Location</fullName>
            </value>
            <value>
                <fullName>SOC Certification</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>