unpackaged/main/default/objects/Account/fields/Compliance_Notes__c.field-meta.xml
<CustomField>
    <fullName>Compliance_Notes__c</fullName>
    <label>Compliance Notes</label>
    <length>255</length>
    <type>Text</type>
</CustomField>