unpackaged/main/default/objects/Account/fields/Credit_Status__c.field-meta.xml
<CustomField>
    <fullName>Credit_Status__c</fullName>
    <description>REQ-2326</description>
    <label>Credit Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No - Denied</fullName>
            </value>
            <value>
                <fullName>On Hold</fullName>
            </value>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>Revoke</fullName>
            </value>
            <value>
                <fullName>Yes - Fully Approved</fullName>
            </value>
            <value>
                <fullName>Yes - Management Override</fullName>
            </value>
            <value>
                <fullName>Yes - Prepay Required</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>