unpackaged/main/default/objects/Account/fields/Drive_Customer_Id__c.field-meta.xml
<CustomField>
    <fullName>Drive_Customer_Id__c</fullName>
    <label>Drive Customer Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>