unpackaged/main/default/objects/Account/fields/Finance_Notes__c.field-meta.xml
<CustomField>
    <fullName>Finance_Notes__c</fullName>
    <description>REQ-2326</description>
    <label>Finance Notes</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>