unpackaged/main/default/objects/Account/fields/GB_Customer_Id__c.field-meta.xml
<CustomField>
    <fullName>GB_Customer_Id__c</fullName>
    <label>Greenbyte Customer Id</label>
    <length>30</length>
    <type>Text</type>
</CustomField>