unpackaged/main/default/objects/Account/fields/GB_Customer_Name__c.field-meta.xml
<CustomField>
    <fullName>GB_Customer_Name__c</fullName>
    <description>Greenbyte Req</description>
    <label>Greenbyte Legacy Customer Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>