unpackaged/main/default/objects/Account/fields/Initial_mega_watt_quantity_total__c.field-meta.xml
<CustomField>
    <fullName>Initial_mega_watt_quantity_total__c</fullName>
    <description>total quantity of plant product transaction object&#39;.</description>
    <label>Initial mega watt quantity total</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>