unpackaged/main/default/objects/Account/fields/Invoice_Requires_SAP_No__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Requires_SAP_No__c</fullName>
    <description>Greenbyte Req</description>
    <label>Invoice Requires SAP No</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>