unpackaged/main/default/objects/Account/fields/isContractPriceCreated__c.field-meta.xml
<CustomField>
    <fullName>isContractPriceCreated__c</fullName>
    <defaultValue>false</defaultValue>
    <label>isContractPriceCreated</label>
    <type>Checkbox</type>
</CustomField>