unpackaged/main/default/objects/Account/fields/Legacy_3MW_ID__c.field-meta.xml
<CustomField>
    <fullName>Legacy_3MW_ID__c</fullName>
    <externalId>true</externalId>
    <label>3MW Legacy Id</label>
    <length>30</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>