unpackaged/main/default/objects/Account/fields/Merge_into_del__c.field-meta.xml
<CustomField>
    <fullName>Merge_into_del__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Merge into</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>Accounts_del</relationshipName>
    <type>Lookup</type>
</CustomField>