unpackaged/main/default/objects/Account/fields/Migrated_Data_Confirmed_Correct__c.field-meta.xml
<CustomField>
    <fullName>Migrated_Data_Confirmed_Correct__c</fullName>
    <label>Migrated Data Confirmed Correct</label>
    <type>Date</type>
</CustomField>