unpackaged/main/default/objects/Account/fields/Netsuite_Response_Message__c.field-meta.xml
<CustomField>
    <fullName>Netsuite_Response_Message__c</fullName>
    <label>Netsuite Response Message</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>