unpackaged/main/default/objects/Account/fields/Netsuite_Subscription_Id__c.field-meta.xml
<CustomField>
    <fullName>Netsuite_Subscription_Id__c</fullName>
    <label>Netsuite Subscription Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>