unpackaged/main/default/objects/Account/fields/Number_of_Active_Purchased_Product__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Active_Purchased_Product__c</fullName>
    <description>This field will calculate number of Active/pending purchased products associated with the account</description>
    <label>Number of Active Purchased Product</label>
    <summaryFilterItems>
        <field>Purchased_Product__c.Status__c</field>
        <operation>equals</operation>
        <value>Active, Pending Activation</value>
    </summaryFilterItems>
    <summaryForeignKey>Purchased_Product__c.Account__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>