unpackaged/main/default/objects/Account/fields/of_Open_Deals__c.field-meta.xml
<CustomField>
    <fullName>of_Open_Deals__c</fullName>
    <label># of Open Deals</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>