unpackaged/main/default/objects/Account/fields/Portfolio_Size_Account__c.field-meta.xml
<CustomField>
    <fullName>Portfolio_Size_Account__c</fullName>
    <label>Portfolio Size</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Small (&lt;500MWp)</fullName>
            </value>
            <value>
                <fullName>Medium (500 - 1000 MWp)</fullName>
            </value>
            <value>
                <fullName>Large (1000 - 5000 MWp)</fullName>
            </value>
            <value>
                <fullName>X-Large (&gt;5000 MWp)</fullName>
            </value>
            <value>
                <fullName>Not Applicable</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>