unpackaged/main/default/objects/Account/fields/Purchased_Product__c.field-meta.xml
<CustomField>
    <fullName>Purchased_Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Purchased Product</label>
    <referenceTo>Purchased_Product__c</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>