unpackaged/main/default/objects/Account/fields/QS_Snowball_Product_Solution1__c.field-meta.xml
<CustomField>
    <fullName>QS_Snowball_Product_Solution1__c</fullName>
    <label>Not to be Used</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
                <default>true</default>
                <label>None</label>
            </value>
            <value>
                <fullName>BluePoint Core Recurring</fullName>
            </value>
            <value>
                <fullName>BluePoint Core SaaS</fullName>
            </value>
            <value>
                <fullName>BluePoint Enterprise SaaS</fullName>
            </value>
            <value>
                <fullName>BluePoint Pro SaaS</fullName>
            </value>
            <value>
                <fullName>Drive Add-ons SaaS</fullName>
            </value>
            <value>
                <fullName>Drive_Core_Lite_SaaS</fullName>
                <label>Drive Core Lite SaaS</label>
            </value>
            <value>
                <fullName>Drive Core Recurring</fullName>
            </value>
            <value>
                <fullName>Drive Core SaaS</fullName>
            </value>
            <value>
                <fullName>Drive O&amp;M Recurring</fullName>
            </value>
            <value>
                <fullName>Drive O&amp;M SaaS</fullName>
            </value>
            <value>
                <fullName>Drive Pro Recurring</fullName>
            </value>
            <value>
                <fullName>Drive Pro SaaS</fullName>
            </value>
            <value>
                <fullName>Ekhosoft Ekho Perpetual License</fullName>
            </value>
            <value>
                <fullName>Ekhosoft Ekho Recurring</fullName>
            </value>
            <value>
                <fullName>Ekhosoft Ekho SaaS</fullName>
            </value>
            <value>
                <fullName>Greenbyte Add-ons Recurring</fullName>
            </value>
            <value>
                <fullName>Greenbyte Add-ons SaaS</fullName>
            </value>
            <value>
                <fullName>Greenbyte Breeze Development SaaS</fullName>
            </value>
            <value>
                <fullName>Greenbyte Core SaaS</fullName>
            </value>
            <value>
                <fullName>Drive Customer Success Recurring</fullName>
            </value>
            <value>
                <fullName>Greenbyte Customer Success Recurring</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>