unpackaged/main/default/objects/Account/fields/QS_Snowball_Product_Solution__c.field-meta.xml
<CustomField>
    <fullName>QS_Snowball_Product_Solution__c</fullName>
    <label>Line Classification Product Solution</label>
    <length>255</length>
    <type>Text</type>
</CustomField>