unpackaged/main/default/objects/Account/fields/Range_Based_Legacy_Pricing_for_GB__c.field-meta.xml
<CustomField>
    <fullName>Range_Based_Legacy_Pricing_for_GB__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Identifies the Account that uses Range based legacy pricing. These are GB accounts. This pricing differs from Slab based Veritas go-forward pricing</description>
    <inlineHelpText>Identifies the Account that uses Range based legacy pricing. These are GB accounts. This pricing differs from Slab based Veritas go-forward pricing</inlineHelpText>
    <label>Range Based Legacy Pricing for GB</label>
    <type>Checkbox</type>
</CustomField>