unpackaged/main/default/objects/Account/fields/Request_Note__c.field-meta.xml
<CustomField>
    <fullName>Request_Note__c</fullName>
    <label>Request Note</label>
    <type>TextArea</type>
</CustomField>