unpackaged/main/default/objects/Account/fields/Requires_dual_signatories__c.field-meta.xml
<CustomField>
    <fullName>Requires_dual_signatories__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Greenbyte Req</description>
    <label>Requires dual signatories</label>
    <type>Checkbox</type>
</CustomField>