unpackaged/main/default/objects/Account/fields/Shipping_Address_Netsuite_Id__c.field-meta.xml
<CustomField>
    <fullName>Shipping_Address_Netsuite_Id__c</fullName>
    <label>Shipping Address Netsuite Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>