unpackaged/main/default/objects/Account/fields/TIN_VAT__c.field-meta.xml
<CustomField>
    <fullName>TIN_VAT__c</fullName>
    <description>Greenbyte Req (Merge VAT No &amp; Company Registration number)</description>
    <label>TIN/VAT</label>
    <length>30</length>
    <type>Text</type>
</CustomField>