unpackaged/main/default/objects/Account/fields/To_Be_Merged__c.field-meta.xml
<CustomField>
    <fullName>To_Be_Merged__c</fullName>
    <defaultValue>false</defaultValue>
    <label>To Be Merged</label>
    <type>Checkbox</type>
</CustomField>