unpackaged/main/default/objects/Account/fields/Total_ARR__c.field-meta.xml
<CustomField>
    <fullName>Total_ARR__c</fullName>
    <description>REQ-2425 :- This Field &#39;Annual Recurring Revenue&quot; is the roll-up summary field that summarizes the ARR from all Purchased Products.</description>
    <label>Total ARR</label>
    <summarizedField>Purchased_Product__c.Active_Annual_Recurring_Revenue__c</summarizedField>
    <summaryForeignKey>Purchased_Product__c.Account__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>