unpackaged/main/default/objects/Account/fields/Ultimate_Parent__c.field-meta.xml
<CustomField>
    <fullName>Ultimate_Parent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Ultimate Parent</label>
    <type>Checkbox</type>
</CustomField>