unpackaged/main/default/objects/Account/fields/Uses_MSA_of__c.field-meta.xml
<CustomField>
    <fullName>Uses_MSA_of__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Uses MSA</label>
    <referenceTo>MSA_Contract__c</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>