unpackaged/main/default/objects/Account/fields/X3MW_Customer_Id__c.field-meta.xml
<CustomField>
    <fullName>X3MW_Customer_Id__c</fullName>
    <externalId>true</externalId>
    <label>3MW Customer Id</label>
    <length>30</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>