unpackaged/main/default/objects/Account/recordTypes/Third_Party.recordType-meta.xml
<RecordType>
    <fullName>Third_Party</fullName>
    <active>true</active>
    <label>Third Party</label>
</RecordType>