unpackaged/main/default/objects/Account/validationRules/Approving_an_Accounts.validationRule-meta.xml
<ValidationRule>
    <fullName>Approving_an_Accounts</fullName>
    <active>true</active>
    <errorConditionFormula>OR(
AND( 
ISCHANGED( Account_Status__c ),
ISPICKVAL( Account_Status__c ,&#39;Approved&#39;),
OR(
ISBLANK( TEXT( Theater__c ) ),
ISBLANK( BillingStreet ),
ISBLANK( BillingCity ) ,
ISBLANK( BillingPostalCode ),
ISBLANK( ShippingStreet ),
ISBLANK( ShippingCity ) ,
ISBLANK(  Uses_MSA_of__c )
)),
AND( 
ISCHANGED( Account_Status__c ),
ISPICKVAL( Account_Status__c ,&#39;Approved&#39;),
OR(
AND(
OR
(BillingCountry = &quot;CAN&quot;, BillingCountry = &quot;CA&quot;,
BillingCountry = &quot;Canada&quot;),
ISBLANK(BillingState)
),
AND(
OR
(BillingCountry = &quot;USA&quot;, BillingCountry =&quot;US&quot;, BillingCountry = &quot;United States&quot; ),
ISBLANK(BillingState)
),
AND(
OR
(ShippingCountry = &quot;CAN&quot;, ShippingCountry = &quot;CA&quot;,
ShippingCountry = &quot;Canada&quot;),
ISBLANK(ShippingState)
),
AND(
OR
(ShippingCountry = &quot;USA&quot;, ShippingCountry = &quot;US&quot; , ShippingCountry = &quot;United States&quot;),
ISBLANK(ShippingState)
)
)
))</errorConditionFormula>
    <errorMessage>An Account must have complete addresses and these fields populated to be Approved: Theater,  and Uses MSA. State/Province is required for USA and Canada.</errorMessage>
</ValidationRule>